--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                          </div>
                          <div class="tab-content" id="experience">
                               <ul>
-                                   <li><span>Ekarma</span><br>Designing responsive web interface</li>
-                                   <li><span>Cyber security</span><br>Photoshop and Canva</li>
-                                   <li><span>Bharat intern</span><br>Python programming </li>
+                                   <li><span>Web Development</span><br>Designing responsive web interface</li>
+                                   <li><span>Cyber security</span><br>Cyber security training from HONYEYWELL ICT ACADEMY</li>
+                                   <li><span>Ekarma</span><br>Graphic Designing</li>
 
                               </ul>
                          </div>
